--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "jade": "~1.11.0",
     "morgan": "~1.8.1",
     "nodemailer": "^4.0.1",
+    "nodemailer-ses-transport": "^1.5.1",
     "nodemailer-smtp-transport": "^2.7.4",
     "serve-favicon": "~2.4.2"
   }
